--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==0.9.6
+APScheduler==3.4.0
 Babel==2.5.1
 blinker==1.4
 click==6.7
@@ -16,7 +17,10 @@ Flask-SQLAlchemy==2.3.2
 Flask-WhooshAlchemy==0.56
 Flask-WTF==0.14.2
 flipflop==1.0
+funcsigs==1.0.2
+futures==3.2.0
 guess-language==0.2
+gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.7
@@ -33,7 +37,7 @@ SQLAlchemy==1.1.15
 sqlalchemy-migrate==0.11.0
 sqlparse==0.2.4
 Tempita==0.5.2
+tzlocal==1.5.1
 Werkzeug==0.12.2
 Whoosh==2.7.4
 WTForms==2.1
-apscheduler==3.4.0
